--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
         "https://animestars.org/cards/*/users/need/"
       ],
       "js": [
+        "localStorage.js",
         "util.js",
         "globalColors.js",
         "CardClasses.js",
@@ -25,6 +26,7 @@
         "https://animestars.org/cards/*/users/trade/"
       ],
       "js": [
+        "localStorage.js",
         "util.js",
         "globalColors.js",
         "CardClasses.js",
@@ -39,6 +41,20 @@
       ],
       "js": [
         "getCard.js"
+      ]
+    },
+    {
+      "matches": [
+        "https://animestars.org/cards/*/users/"
+      ],
+      "js": [
+        "localStorage.js",
+        "util.js",
+        "globalColors.js",
+        "CardClasses.js",
+        "container.js",
+        "cardFinder.js",
+        "users.js"
       ]
     }
   ]
