--- a/manifest.json
+++ b/manifest.json
@@ -70,6 +70,20 @@
         "cardFinder.js",
         "remelt.js"
       ]
+    },
+    {
+      "matches": [
+        "https://animestars.org/cards/*/trade?mycard=*"
+      ],
+      "js": [
+        "localStorage.js",
+        "util.js",
+        "globalColors.js",
+        "CardClasses.js",
+        "container.js",
+        "cardFinder.js",
+        "tradeuser.js"
+      ]
     }
   ]
 }
