--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
       "js": [
         "localStorage.js",
         "util.js",
+        "fetchApi.js",
         "globalColors.js",
         "CardClasses.js",
         "container.js",
@@ -28,6 +29,7 @@
       "js": [
         "localStorage.js",
         "util.js",
+        "fetchApi.js",
         "globalColors.js",
         "CardClasses.js",
         "container.js",
@@ -40,6 +42,9 @@
         "https://animestars.org/*"
       ],
       "js": [
+        "localStorage.js",
+        "util.js",
+        "fetchApi.js",
         "getUserHash.js",
         "getCard.js"
       ]
@@ -51,6 +56,7 @@
       "js": [
         "localStorage.js",
         "util.js",
+        "fetchApi.js",
         "globalColors.js",
         "CardClasses.js",
         "container.js",
@@ -65,6 +71,7 @@
       "js": [
         "localStorage.js",
         "util.js",
+        "fetchApi.js",
         "globalColors.js",
         "CardClasses.js",
         "container.js",
@@ -79,11 +86,27 @@
       "js": [
         "localStorage.js",
         "util.js",
+        "fetchApi.js",
         "globalColors.js",
         "CardClasses.js",
         "container.js",
         "cardFinder.js",
         "tradeuser.js"
+      ]
+    },
+    {
+      "matches": [
+        "https://animestars.org/clubs/*/boost/"
+      ],
+      "js": [
+        "localStorage.js",
+        "util.js",
+        "fetchApi.js",
+        "globalColors.js",
+        "CardClasses.js",
+        "container.js",
+        "cardFinder.js",
+        "service.js"
       ]
     }
   ]
