--- a/manifest.json
+++ b/manifest.json
@@ -106,7 +106,7 @@
         "CardClasses.js",
         "container.js",
         "cardFinder.js",
-        "service.js"
+        "clubs.js"
       ]
     }
   ]
