--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "glob": "^11.0.0",
     "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "rollup-plugin-obfuscator": "^1.1.0",
+    "terser": "^5.37.0",
+    "vite": "^6.0.1",
+    "vite-plugin-static-copy": "^2.2.0"
   }
 }
