--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,14 @@
 {
   "manifest_version": 3,
-  "name": "AnimeStars",
-  "version": "1.1.0",
+  "name": "AnimeStars Alpha",
+  "version": "1.1.3",
+  "author": "MrKoMi",
+  "description": "Functionality for AnimeStars: Auto loot card, find needed cards in all categories, and find duplicates in remelt.",
+  "functions": {
+    "autoLootCard": "Automatically loots cards for users.",
+    "findNeedCardInAllCategories": "Finds needed cards in all categories.",
+    "findDuplicatesInRemelt": "Detects duplicates in the remelt process."
+  },
   "permissions": [
     "tabs",
     "scripting"
