--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,9 @@
 {
   "manifest_version": 3,
   "name": "AnimeStars Alpha",
-  "version": "1.1.3",
+  "version": "1.1.6",
   "author": "MrKoMi",
   "description": "Functionality for AnimeStars: Auto loot card, find needed cards in all categories, and find duplicates in remelt.",
-  "functions": {
-    "autoLootCard": "Automatically loots cards for users.",
-    "findNeedCardInAllCategories": "Finds needed cards in all categories.",
-    "findDuplicatesInRemelt": "Detects duplicates in the remelt process."
-  },
   "permissions": [
     "tabs",
     "scripting"
@@ -33,7 +28,8 @@
         "https://animestars.org/cards/*/users/",
         "https://animestars.org/cards_remelt/*",
         "https://animestars.org/cards/*/trade?mycard=*",
-        "https://animestars.org/clubs/*/boost/*"
+        "https://animestars.org/clubs/*/boost/*",
+        "https://animestars.org/user/*/"
       ],
       "css" :[
         "css/button.css",
@@ -93,6 +89,17 @@
       "js": [
         "content/clubs.js"
       ]
+    },
+    {
+      "matches": [
+        "https://animestars.org/user/*/"
+      ],
+      "js": [
+        "content/myProfile.js"
+      ]
     }
-  ]
+  ],
+  "action": {
+    "default_popup": "index.html"
+  }
 }
