--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,11 @@
     "scripting",
     "storage"
   ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "host_permissions": [
     "https://animestars.org/*"
   ],
