--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "AnimeStars Alpha",
+  "name": "AnimeStars Bot",
   "version": "1.2.19",
   "author": "MrKoMi",
   "description": "Press INSERT to open the menu",
