--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "AnimeStars Alpha",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "author": "MrKoMi",
   "description": "Press INSERT to open the menu",
   "permissions": [
@@ -38,6 +38,7 @@
         "menu/tab.js",
         "menu/tabs/misc.js",
         "menu/tabs/fun.js",
+        "menu/tabs/global.js",
         "menu/tabs/visuals.js",
         "menu/menu.js",
         "menu/content.js"
@@ -106,7 +107,9 @@
         "content/services/trades/TradeHistory.js",
 
         "content/DataConfig.js",
-        "content/ReceiveCard.js"
+        "content/ReceiveCard.js",
+
+        "content/AutoLogin.js"
       ]
     },
     {
