--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "AnimeStars Alpha",
-  "version": "1.3.8",
+  "version": "1.3.8b",
   "author": "MrKoMi",
   "description": "Press INSERT to open the menu",
   "permissions": [
