performance and redo trade helper

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "AnimeStars Alpha",
-  "version": "1.3.10",
+  "version": "1.3.11",
   "author": "MrKoMi",
   "description": "Press INSERT to open the menu",
   "permissions": [
@@ -85,6 +85,7 @@
         "content/components/ui/Input.js",
         "content/components/ui/Li.js",
         "content/components/ui/Box.js",
+        "content/components/ui/Link.js",
         
         "content/services/urls/UrlService.js",
         "content/services/urls/AnimeUrlService.js",
