--- a/public/manifest.json
+++ b/public/manifest.json
@@ -54,7 +54,8 @@
       "css": [
         "css/button.css",
         "css/switcher.css",
-        "css/cards.css"
+        "css/cards.css",
+        "css/Link.css"
       ],
       "js": [
         "content/external/jQuery.js",
