Connect new menu with main extension

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -54,6 +54,7 @@
         "https://asstars1.astars.club/*"
       ],
       "css": [
+        "css/page.css",
         "css/button.css",
         "css/switcher.css",
         "css/cards.css",
