fix for new site version, add limiter

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -138,7 +138,7 @@
         "https://asstars.club/cards/*/users/"
       ],
       "js": [
-        "content/Users.js"
+        "content/Trade.js"
       ]
     },
     {
