--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "AnimeStars Alpha",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "author": "MrKoMi",
   "description": "Press INSERT to open the menu",
   "permissions": [
@@ -15,11 +15,11 @@
     "128": "icons/icon128.png"
   },
   "host_permissions": [
-    "https://animestars.org/*",
-    "https://asstars.tv/*",
-    "https://as1.astars.club/*",
-    "https://asstars1.astars.club/*",
-    "https://asstars.club/*"
+    "https://animestars.org",
+    "https://asstars.tv",
+    "https://as1.astars.club",
+    "https://asstars1.astars.club",
+    "https://asstars.club"
   ],
   "background": {
     "service_worker": "background/worker.js"
@@ -37,11 +37,7 @@
   "content_scripts": [
     {
       "matches": [
-        "https://animestars.org/*",
-        "https://asstars.tv/*",
-        "https://as1.astars.club/*",
-        "https://asstars1.astars.club/*",
-        "https://asstars.club/*"
+        "DOMAIN/*"
       ],
       "js": [
         "content/services/config.js",
@@ -50,11 +46,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/*",
-        "https://asstars.tv/*",
-        "https://as1.astars.club/*",
-        "https://asstars1.astars.club/*",
-        "https://asstars.club/*"
+        "DOMAIN/*"
       ],
       "css": [
         "css/page.css",
@@ -107,11 +99,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/cards/*/users/need/",
-        "https://asstars.tv/cards/*/users/need/",
-        "https://as1.astars.club/cards/*/users/need/",
-        "https://asstars1.astars.club/cards/*/users/need/",
-        "https://asstars.club/cards/*/users/need/"
+        "DOMAIN/cards/users/need/*"
       ],
       "js": [
         "content/Need.js"
@@ -119,11 +107,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/cards/*/users/trade/",
-        "https://asstars.tv/cards/*/users/trade/",
-        "https://as1.astars.club/cards/*/users/trade/",
-        "https://asstars1.astars.club/cards/*/users/trade/",
-        "https://asstars.club/cards/*/users/trade/"
+        "DOMAIN/cards/users/trade/*"
       ],
       "js": [
         "content/Trade.js"
@@ -131,11 +115,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/cards/*/users/",
-        "https://asstars.tv/cards/*/users/",
-        "https://as1.astars.club/cards/*/users/",
-        "https://asstars1.astars.club/cards/*/users/",
-        "https://asstars.club/cards/*/users/"
+        "DOMAIN/cards/users/?*"
       ],
       "js": [
         "content/Trade.js"
@@ -143,11 +123,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/cards_remelt/*",
-        "https://asstars.tv/cards_remelt/*",
-        "https://as1.astars.club/cards_remelt/*",
-        "https://asstars1.astars.club/cards_remelt/*",
-        "https://asstars.club/cards_remelt/*"
+        "DOMAIN/cards_remelt/*"
       ],
       "js": [
         "content/Remelt.js"
@@ -155,23 +131,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/cards/*/trade?mycard=*",
-        "https://asstars.tv/cards/*/trade?mycard=*",
-        "https://as1.astars.club/cards/*/trade?mycard=*",
-        "https://asstars1.astars.club/cards/*/trade?mycard=*",
-        "https://asstars.club/cards/*/trade?mycard=*"
-      ],
-      "js": [
-        "content/TradeUser.js"
-      ]
-    },
-    {
-      "matches": [
-        "https://animestars.org/clubs/boost/*",
-        "https://asstars.tv/clubs/boost/*",
-        "https://as1.astars.club/clubs/boost/*",
-        "https://asstars1.astars.club/clubs/boost/*",
-        "https://asstars.club/clubs/boost/*"
+        "DOMAIN/clubs/boost/*"
       ],
       "js": [
         "content/external/socketIo.js",
@@ -181,11 +141,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/user/*/cards/trade/*",
-        "https://asstars.tv/user/*/cards/trade/*",
-        "https://as1.astars.club/user/*/cards/trade/*",
-        "https://asstars1.astars.club/user/*/cards/trade/*",
-        "https://asstars.club/user/*/cards/trade/*"
+        "DOMAIN/user/*/cards/trade/*"
       ],
       "js": [
         "content/Propose.js"
@@ -193,11 +149,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/trades/",
-        "https://asstars.tv/trades/",
-        "https://as1.astars.club/trades/",
-        "https://asstars1.astars.club/trades/",
-        "https://asstars.club/trades/"
+        "DOMAIN/user/trades/"
       ],
       "js": [
         "content/ConfirmTrade.js"
@@ -205,11 +157,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/cards/pack/",
-        "https://asstars.tv/cards/pack/",
-        "https://as1.astars.club/cards/pack/",
-        "https://asstars1.astars.club/cards/pack/",
-        "https://asstars.club/cards/pack/"
+        "DOMAIN/cards/pack/"
       ],
       "js": [
         "content/external/jQueryHTML.js",
@@ -221,11 +169,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/user/*/",
-        "https://asstars.tv/user/*/",
-        "https://as1.astars.club/user/*/",
-        "https://asstars1.astars.club/user/*/",
-        "https://asstars.club/user/*/"
+        "DOMAIN/user/*/"
       ],
       "js": [
         "content/Profile.js"
@@ -233,11 +177,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/aniserials/videos/*/*",
-        "https://asstars.tv/aniserials/videos/*/*",
-        "https://as1.astars.club/aniserials/videos/*/*",
-        "https://asstars1.astars.club/aniserials/videos/*/*",
-        "https://asstars.club/aniserials/videos/*/*"
+        "DOMAIN/aniserials/videos/*/*"
       ],
       "js": [
         "content/Deck.js"
@@ -245,11 +185,7 @@
     },
     {
       "matches": [
-        "https://animestars.org/user/*/cards_progress/*",
-        "https://asstars.tv/user/*/cards_progress/*",
-        "https://as1.astars.club/user/*/cards_progress/*",
-        "https://asstars1.astars.club/user/*/cards_progress/*",
-        "https://asstars.club/user/*/cards_progress/*"
+        "DOMAIN/*/cards_progress/*"
       ],
       "js": [
         "content/external/exel.js",
